--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "angular-ui-date": "1.1.1",
     "angular-ui-slider": "0.4.0",
     "async": "2.6.0",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-plugin-angularjs-annotate": "0.8.2",
+    "babel-preset-env": "1.6.1",
     "bootstrap": "3.3.7",
     "clean-css-cli": "4.1.10",
     "console-control-strings": "1.1.0",
@@ -65,20 +69,23 @@
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "1.1.1",
     "karma-jasmine": "1.1.1",
+    "karma-webpack": "2.0.6",
     "less": "2.7.2",
     "less-loader": "4.0.5",
     "less-plugin-autoprefix": "1.5.1",
     "less-plugin-clean-css": "1.5.1",
     "moment": "2.19.3",
     "nomnom": "1.8.1",
+    "ol": "4.5.0",
     "ol-cesium": "openlayers/ol-cesium#3014d02de4",
-    "openlayers": "4.5.0",
-    "phantomjs-prebuilt": "2.1.16",
+    "phantomjs25-beta": "1.0.17",
     "proj4": "2.4.4",
     "svg2ttf": "4.1.0",
     "temp": "0.8.3",
     "ttf2eot": "2.0.0",
     "ttf2woff": "2.0.1",
+    "uglify-js": "3.2.1",
+    "uglifyjs-webpack-plugin": "1.1.2",
     "url-loader": "0.6.2",
     "url-polyfill": "1.0.8",
     "walk": "2.3.9",
