--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "karma": "1.7.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "1.1.1",
+    "karma-coverage-istanbul-reporter": "1.3.0",
     "karma-jasmine": "1.1.1",
     "karma-webpack": "2.0.6",
     "less": "2.7.2",
@@ -77,10 +78,10 @@
     "less-plugin-clean-css": "1.5.1",
     "moment": "2.20.1",
     "nomnom": "1.8.1",
-    "openlayers": "4.6.4",
     "ol": "4.6.4",
     "ol-cesium": "1.33.0",
     "olcs": "0.0.1",
+    "openlayers": "4.6.4",
     "phantomjs-prebuilt": "2.1.16",
     "proj4": "2.4.4",
     "svg2ttf": "4.1.0",
