--- a/.travis.yml
+++ b/.travis.yml
@@ -95,7 +95,7 @@ jobs:
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
     - make test || true
-    - ls -l .build/coverage/
+    - ls -l .build/coverage/ || true
     - cat .build/coverage/lcov.info || true
     - make lint
     - sed '/ngeo:/d' -i .eslintrc.yaml
