--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gaze": "1.1.2",
     "jasmine-core": "2.7.0",
     "jquery": "3.2.1",
+    "jquery-datetimepicker": "2.5.16",
     "jsdoc": "3.5.5",
     "jsdom": "9.12.0",
     "jsts": "1.4.0",
