--- a/.travis.yml
+++ b/.travis.yml
@@ -88,9 +88,9 @@ jobs:
     - buildtools/webpack-migration
     - git add -A  # for git-attributes
     script:
-    - NODE_ENV=dev node_modules/.bin/webpack
-    - rm -rf dist/*
-    - NODE_ENV=prod node_modules/.bin/webpack
+    - if [ "${TRAVIS_PULL_REQUEST}" == false ]; then NODE_ENV=prod; else NODE_ENV=dev; fi
+    - echo $NODE_ENV
+    - node_modules/.bin/webpack
     - export CHROME_BIN=/opt/google/chrome/chrome
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
@@ -109,6 +109,7 @@ jobs:
     - node_modules/.bin/eslint contribs/gmf/examples || true
     - node_modules/.bin/eslint contribs/gmf/test
     - node_modules/.bin/eslint contribs/gmf/apps
+    - JOB=publish-examples-ngeo buildtools/deploy.sh
 
   - stage: Build
     env:
@@ -123,13 +124,6 @@ jobs:
     - DEVELOPMENT=TRUE
     script:
     - buildtools/test_examples.py 2/2
-    if: type = pull_request
-  - stage: Build
-    env:
-    - JOB=build-examples-ngeo
-    - DEVELOPMENT=TRUE
-    script:
-    - make examples-hosted-ngeo
     if: type = pull_request
   - stage: Build
     env:
@@ -173,12 +167,6 @@ jobs:
     after_success:
     - if [ "${PACKAGE_VERSION}" = "${TRAVIS_TAG}" ]; then npm publish; fi
     if: tag IS present AND repo = camptocamp/ngeo
-  - stage: Build and publish
-    env:
-    - JOB=publish-examples-ngeo
-    script:
-    - buildtools/deploy.sh
-    if: type = push AND repo = camptocamp/ngeo AND branch IS present
   - stage: Build and publish
     env:
     - JOB=publish-examples-gmf
